Comment out notes page

--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -18,7 +18,7 @@ hannesso@kth.se & jokull@kth.se & edvarda@kth.se & jonand8@kth.se \\
 \includegraphics[width=0.13\linewidth]{photo_Kristofer} &
 \includegraphics[width=0.13\linewidth]{photo_Jokull} &
 \includegraphics[width=0.13\linewidth]{Alan_Turing_photo} &
-\includegraphics[width=0.13\linewidth]{Alan_Turing_photo}
+\includegraphics[width=0.13\linewidth]{photo_Jonas}
 \end{tabular}}
 % Normally there will not be any pictures but we want
 % these so that we can connect faces to names in the course
@@ -50,25 +50,25 @@ Our results show that using different smoothing algorithms can change the result
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{NOTE}
-\begin{itemize}
-
-\item The following sections are arranged in the order they would appear in a scientific paper. We think that these sections need to be there and written. However, these are only guidelines and if you think that some of these sections or subsections are irrelevant to you, please feel free to remove them. Similarly, if you want to include more sections or subsections please go ahead. Also feel free to rearrange them according to your convenience, but keeping some common sense (eg.~Introduction cannot come after Conclusions).
-
-\item \textit{Introduction, Related Works, Experimental Results, Discussions, Summary} are sections that MUST be contained.
-
-\item In the section of your \textit{Method}: please do not list your project as log book entries, please talk about the final method you want to present to us. Talk about the method scientifically or technically and not as "I did this..." "Then I tried this..." "this happened...." etc.
-
-\item Do not paste any code unless it is very relevant!
-
-\item The section \textit{Contributions} is a place to express any difference in contributions. The default assumption is that you all agree that all of you had an equal part to play in the project.
-
-\item We suggest that you try to write this as scientifically as possible and not simply like a project report. Good Luck!
-
-\item Please remove \textbf{this} NOTE section in your final report.
-
-\end{itemize}
-\section{Introduction (1--2 pages)}
+%\section*{NOTE}
+%\begin{itemize}
+%
+%\item The following sections are arranged in the order they would appear in a scientific paper. We think that these sections need to be there and written. However, these are only guidelines and if you think that some of these sections or subsections are irrelevant to you, please feel free to remove them. Similarly, if you want to include more sections or subsections please go ahead. Also feel free to rearrange them according to your convenience, but keeping some common sense (eg.~Introduction cannot come after Conclusions).
+%
+%\item \textit{Introduction, Related Works, Experimental Results, Discussions, Summary} are sections that MUST be contained.
+%
+%\item In the section of your \textit{Method}: please do not list your project as log book entries, please talk about the final method you want to present to us. Talk about the method scientifically or technically and not as "I did this..." "Then I tried this..." "this happened...." etc.
+%
+%\item Do not paste any code unless it is very relevant!
+%
+%\item The section \textit{Contributions} is a place to express any difference in contributions. The default assumption is that you all agree that all of you had an equal part to play in the project.
+%
+%\item We suggest that you try to write this as scientifically as possible and not simply like a project report. Good Luck!
+%
+%\item Please remove \textbf{this} NOTE section in your final report.
+%
+%\end{itemize}
+\section{Introduction} %(1--2 pages)
 \label{sec:intro}
 
 Language models are a staple in many domains including speech recognition, optical character
