--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -109,23 +109,19 @@ We split into pairs with each pair implementing their model. We decided to go wi
 \item Punkt Tokenizer Models
 \item Mappings to the Universal Part-Of-Speech Tagset
 \item Conditional Frequency Distribution and Conditional Probability Distribution classes
-\item classes for each of the above mentioned smoothing techniques
+\item Classes for each of the above mentioned smoothing techniques
 \end{itemize}
-
-
-
 
 \subsection{Implementation}
 \label{sec:impl}
-
-Should contain the following: When, where, and how was the study done? What materials were used or who was included in the study groups (patients, etc.)?
-
-
 The group came up with the idea to compare two different approaches to generating text from a corpus, both including grammar but in different ways. To be able to compare them at the same level both approaches used the Brown corpus and trigrams, with fallback to bigrams allowed. A few smoothing techniques were picked for use in both approaches.
+
+\subsection{ngrams}
+Different models were tested from a bigram model up to quad grams models. Using a 
 
 **Here we should talk about different N's we used in the model and how that affected the sentences that were generated.**
 
-\subsection{Built in grammar model}
+\subsubsection{Built in grammar model}
 The first approach was to create a model that included both word and grammar information. This was achieved by generating trigrams where each word was a tuple of the word and its associated Part-Of-Speech (POS) tag. A trigram from ``the man walked'' would be (the, DET), (man, NOUN), (walked, VERB))
 
 The distribution table contains the n-1-gram plus the tags as a key and the distribution probability of the next word. In the example above the key would be (the, DET), (man, NOUN) and that row in the table would contain the probability distribution of each word and tag that could follow that word given the corpus.
@@ -137,7 +133,7 @@ To be able to distinguish words that are in the beginning of sentence and in the
 \subsubsection{Sentence generation}
 Words were picked from the model randomly given the probability of that word and the context. To find the word to start the sentence we used the start of sentence symbol. We then recursively run through the word estimation function adding a new word to the context until we get a end of sentence symbol. If a word was not found for a given context we backoff to the bigram model and look for the word in that model.
 
-\subsection{Inferred grammar model}
+\subsubsection{Inferred grammar model}
 The second approach separated grammar and words into two models which were used in sequence to generate text. The grammar model provided what POS tag should be next, and the word model provided a word for the given tags, both using trigrams. This would take ``the man walked'' and create the trigrams (DET, NOUN, VERB) for the grammar model, and (DET, NOUN, man) and (NOUN, VERB, walked) for the grammar-word model.
 
 \subsection{Smoothing}
@@ -162,10 +158,6 @@ Here we will write clever stuff about this smoothing technique
 
 \subsubsection{Simplified Good-Turing Frequency Estimation}
 Here we will write clever stuff about this smoothing technique
-
-
-
-
 
 
 
