Update chen reference, add to related works

--- a/report/reflist.bib
+++ b/report/reflist.bib
@@ -43,7 +43,7 @@
   year = {2009}
 }	
 
-@TechReport{Chen98anempirical,
+@TechReport{chen-smoothing,
     author = {Stanley F. Chen},
     title = {An Empirical Study of Smoothing Techniques for Language Modeling},
     year = {1998}
