Summary and Contrubution work

--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -245,9 +245,17 @@ What answer was found to the research question; what did the study find? Was the
 \section{Summary and Conclusions}
 \label{sec:summary}
 
+In this section we present the results of our experiments. We present the performance of the algorithms tested and which of the techniques used performed best. We show the ngram count affects the sentences generated and what affect smoothing could have on a sentence generation.
+
+We present that using
+
+\subsection{nGram count}
+We testing out different sizes 
 
 
-We list up the problem we ran into and what we could have done different. 
+\subsection{Smoothing}
+
+
 
 
 
@@ -256,15 +264,7 @@ We list up the problem we ran into and what we could have done different.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Contributions}
 \label{sec:contributions}
-We the members of project group 61 unanimously declare that
-we have all equally contributed toward the completion of this
-project.
-
-Should we list up how many hours each member put into the project?
-
-Should we also list up how many hours each part of the project took?
-
-
+In the beginning of the project all team members agreed that we will always work on the project together. For 5 consecutive weekends in a row the team had a NLP workshop. We started each morning with a meeting to plan  the course of our day. We than splitted up into groups of two. All team members had an equal play in the project. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
