--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -115,14 +115,13 @@ To be able to distinguish words that are in the beginning of sentence and in the
 Words were picked from the model randomly given the probability of that word and the context. To find the word to start the sentence we used the start of sentence symbol. We then recursively run through the word estimation function adding a new word to the context until we get a end of sentence symbol. If a word was not found for a given context we backoff to a n-1-gram model and look for the word in that model.
 
 \subsection{Inferred grammar model}
-The second approach separated grammar and words into two models which were used in sequence to generate text. The grammar model provided what POS tag should be next, and the word model provided a word for the given tags, both using trigrams. This would take ``the man walked'' and create the trigrams (DET, NOUN, VERB) for the grammar model, and (DET, NOUN, man) and (NOUN, VERB, walked) for the grammar-word model.
-
-The second approach separated grammar and words into two models which were used in sequence to generate text. The grammar model was built using sentences of POS-tags from a tagged corpus, while the word-grammar model was built using both words and tags. The grammar model would generate a likely next tag based upon the previous tags. "Generate(<t3>|<t1>,<t2>)" which the word model would use as a constraint for selecting the next word, Generate(w3 | w1, w2, <t3>). In terms of data structures, this made the model look like an n+1 order model as compared to the grammar model, but without increasing the markov-order.
+The second approach separated grammar and words into two models which were used in sequence to generate text. The grammar model was built using sentences of POS-tags from a tagged corpus, while the word-grammar model was built using both words and tags. The grammar model would generate a likely next tag based upon the previous tags. "Generate(<t3>|<t1>,<t2>)" which the word model would use as a constraint for selecting the next word, Generate(w3 | w1, w2, <t3>). In terms of data structures, this made the model look like an n+1 order model as compared to the grammar model, but without increasing the number of preceding words that a new word depended on, but instead constraining it to a specific grammatical tag.
 
 \subsection{Smoothing}
 
+
 \subsubsection{Maximum Likelihood Estimate}
-The problem with using only Maximum Likelihood Estimation is that it, in a sense, maximises that likelihood that we'll just generate the training set. Since the training set is limited in scope, our n-gram models will suffer from sparse data in the sense that a lot of n-grams only occur once or a few times in the training set. MLE will hence attribute them a very low or zero likelihood, even though they might be perfectly reasonable n-grams to build sentences upon. We chose three different smoothing techniques besides MLE for testing our models.
+The problem with using only Maximum Likelihood Estimation is that it, in a sense, maximises that likelihood to generate the training set. Since the training set is limited in scope, our n-gram models will suffer from sparse data in the sense that a lot of n-grams only occur once or a few times in the training set. MLE will hence attribute them a very low, even though they might be perfectly reasonable n-grams to build sentences upon. We chose three different smoothing techniques besides MLE for testing our models.
 
 \subsubsection{Laplace smoothing}
 Laplace smoothing works simply by increasing the count of every n-gram by one, before calculating the MLE values, thus effectively redistributing a chunk of the probability mass from the more frequent n-grams to the less frequent ones.
@@ -147,16 +146,33 @@ We split into pairs with each pair implementing their model. We decided to go wi
 \item classes for each of the above mentioned smoothing techniques
 \end{itemize}
 
-
-
-
-
-
+\subsubsection{Deviations from the plan}
+Our implementations unfortunately failed to conform to the specifications we had outlined. The next section outlines how the implemented models deviated from the plan and how the experiment was affected.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Experimental results}
 \label{sec:exps}
+
+
+
+\subsection{Models used in experiment}
+The models used in the experiments, we later realized, were implemented in a way that was inconsistent with the specifications outlined in {Inferred grammar model}. This was a big setback, since it effectively meant that the data gathered from the experiment told us nothing about the hypothetical models outlined in {Our method}.
+
+We will use SM* and IGM* to refer to the implementation of the Semantic model and Inferred grammar model used in the experiment.
+
+\subsubsection{Semantic model}
+The Semantic model was inconsistent with the specifications in that it 
+
+
+\subsubsection{Inferred grammar model}
+The implementation of the Inferred grammar model (IGM*) was, among the two experimental models, the one most inconsistent with the specifications. 
+
+IGM* separated grammar and words into two models which were used in sequence to generate text. The grammar model modeled trigrams of POS-tags, which was consistent with our specifications. The word-grammar model generated a new word, given the previous two POS-tags. This is inconsistent with the specifications. IGM* would take ``the man walked'' and create the trigrams (DET, NOUN, VERB) for the grammar model, and (DET, NOUN, walked) for the grammar-word model.
+
+To highlight the inconsistency, IGM generates $(w_3|w_1,w_2,t_3)$, while IGM* generates $(w_3 | t_1,t_2)$.
+
+\subsection{Experimental setup}
 
 \begin{figure}[t!]%
     \centering
@@ -172,7 +188,6 @@ We split into pairs with each pair implementing their model. We decided to go wi
     \label{fig:example}%
 \end{figure}
 
-\subsection{Experimental setup}
 Each model was used to generate 5 sentences per smoothing method for a total of 40 sentences. 5 sentences were also picked from the Brown corpus. All the sentences were mixed together randomly and then added to a survey which allowed participants to rate each sentence on a scale of 1 to 5 whether it was created by a human or a computer, with 1 representing definitely a human and 5 definitely a computer. Apart from the sentence scoring we only asked if the participants were native English speakers or not. The survey solution chosen was QuestionPro.
 
 \subsection{Experiment ...}
