--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -14,12 +14,11 @@
 Group 61\\
 \begin{tabular}{cccc}
 K. Hannesson & J. Jóhannsson & E. Ahlsén & J. Andersson\\
-1982 & 1984 & 1988 & 1984 \\
-August 20 & January 12 & February 9 & February 10 \\
+Agust 20 & January 12 & BIRTHDATE3 & February 10 \\
 hannesso@kth.se & jokull@kth.se & edvarda@kth.se & jonand8@kth.se \\
 \includegraphics[width=0.13\linewidth]{photo_Kristofer} &
 \includegraphics[width=0.13\linewidth]{photo_Jokull} &
-\includegraphics[width=0.13\linewidth]{photo_Edvard} &
+\includegraphics[width=0.13\linewidth]{Alan_Turing_photo} &
 \includegraphics[width=0.13\linewidth]{photo_Jonas}
 \end{tabular}}
 % Normally there will not be any pictures but we want
