--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -162,76 +162,8 @@ Our implementations unfortunately failed to conform to the specifications we had
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Experimental results}
 \label{sec:exps}
-<<<<<<< HEAD
+\subfile{experiment_results}
 
-
-
-\subsection{Models used in experiment}
-The models used in the experiments, we later realized, were implemented in a way that was inconsistent with the specifications outlined in {Inferred grammar model}. This was a big setback, since it effectively meant that the data gathered from the experiment told us nothing about the hypothetical models outlined in {Our method}.
-
-We will use SM* and IGM* to refer to the implementation of the Semantic model and Inferred grammar model used in the experiment.
-
-\subsubsection{Semantic model}
-The Semantic model was inconsistent with the specifications in that it 
-
-
-\subsubsection{Inferred grammar model}
-The implementation of the Inferred grammar model (IGM*) was, among the two experimental models, the one most inconsistent with the specifications. 
-
-IGM* separated grammar and words into two models which were used in sequence to generate text. The grammar model modeled trigrams of POS-tags, which was consistent with our specifications. The word-grammar model generated a new word, given the previous two POS-tags. This is inconsistent with the specifications. IGM* would take ``the man walked'' and create the trigrams (DET, NOUN, VERB) for the grammar model, and (DET, NOUN, walked) for the grammar-word model.
-
-To highlight the inconsistency, IGM generates $(w_3|w_1,w_2,t_3)$, while IGM* generates $(w_3 | t_1,t_2)$.
-
-\subsection{Experimental setup}
-=======
->>>>>>> 31026df02542aeb89fad135b06abfd4db5c10cc9
-
-\begin{figure}[t!]%
-    \centering
-    \subfloat[Performance of each model as well as the real and baseline sentences]{{\includegraphics[width=4.5cm]{results/boxplot_resultsByModel} }}%
-    \qquad
-    \subfloat[Performance of each model and smoothing method]{{\includegraphics[width=8cm]{results/boxplot_resultsByModelAndSmoothing} }}%
-    \qquad
-    \caption{Model performances compared with respect to smoothing methods. Diamond represents means.}%
-    \subfloat[Performance of each model as well as the real and baseline sentences]{{\includegraphics[width=4.5cm]{results/histogram_resultsByModel} }}%
-    \qquad
-    \subfloat[Performance of each model and smoothing method]{{\includegraphics[width=8cm]{results/histogram_resultsByModelAndSmootingMethod} }}%
-    \caption{Model performances compared with respect to smoothing methods. Dotted lines represent means.}%
-    \label{fig:example}%
-\end{figure}
-
-Each model was used to generate 5 sentences per smoothing method for a total of 40 sentences. 5 sentences were also picked from the Brown corpus. All the sentences were mixed together randomly and then added to a survey which allowed participants to rate each sentence on a scale of 1 to 5 whether it was created by a human or a computer, with 1 representing definitely a human and 5 definitely a computer. Apart from the sentence scoring we only asked if the participants were native English speakers or not. The survey solution chosen was QuestionPro.
-
-\subsection{Experiment ...}
-
-Here we talk about how which smoothing technique worked best for us why the results were the way they were. We also explain why the model containing the grammar was better than the inferred grammar one.
-
-\begin{figure}
-\centering
-\includegraphics[width=0.8\linewidth]{histogram}
-\caption{A description that makes browsing the paper easy and clearly
-describes what is in the picture. Make sure that the text in the figure
-is large enough to read and that the axes are labelled.}
-\label{fig:histogram}
-\end{figure}
-
-
-
-\begin{table}
-\begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
-Bla bla & Bla bla & Bla bla \\ \hline
-42 & 42 & 42 \\ \hline
-42 & 42 & 42 \\ \hline
-\end{tabular}
-\caption{A description that makes browsing the paper easy and clearly
-describes what is in the table.}
-\label{tab:results}
-\end{center}
-\end{table}
-
-What answer was found to the research question; what did the study find? Was the tested hypothesis true?
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
