--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -75,11 +75,7 @@ Our results show that using different smoothing algorithms can change the result
 \section{Introduction} %(1--2 pages)
 \label{sec:intro}
 
-Language models are a staple in many domains including speech recognition, optical character
-recognition, handwriting recognition, machine translation, and spelling correction. The dominant technology in language modeling is n-gram models, which are straightforward to construct except for the issue of smoothing, a technique used to better estimate probabilities when there is insufficient data to estimate probabilities accurately\textbf{[Chen-Goodman]}. Many different techniques have been proposed for smoothing n-gram models. In this project we show how different smoothing techniques work and how they will affect the sentences generated.
-
-In the following sections we will describe the difference in the models generated and how including grammar affects
-
+\subfile{introduction}
 
 %**
 %Why was the study undertaken? What was the research question, the tested hypothesis or the purpose of the research?
@@ -149,7 +145,7 @@ We split into pairs with each pair implementing their model. We decided to go wi
 \item Brown corpus
 \item Treebank Part of Speech Tagger (Maximum entropy)
 \item Punkt Tokenizer Models
-\item Mappings to the Universal Part-Of-Speech Tagset
+\item Mappings to the Universal and Brown Part-Of-Speech Tagset
 \item Conditional Frequency Distribution and Conditional Probability Distribution classes
 \item classes for each of the above mentioned smoothing techniques
 \end{itemize}
