--- a/report/ai15_group61_report.tex
+++ b/report/ai15_group61_report.tex
@@ -10,6 +10,7 @@
 \graphicspath{{pictures/}}
 
 \title{Sentence Generation using Two Models \\ \large{Project in the course DD2380 at KTH}}
+
 \author{\hspace*{-0.5cm}
 Group 61\\ \\[0.05cm]
 \begin{tabular}{cccc}
@@ -19,7 +20,7 @@ August 20 & January 12 & February 9 & February 10 \\
 hannesso@kth.se & jokull@kth.se & edvarda@kth.se & jonand8@kth.se \\ \\[0.05cm]
 \includegraphics[width=0.13\linewidth]{photo_Kristofer} &
 \includegraphics[width=0.13\linewidth]{photo_Jokull} &
-\includegraphics[width=0.13\linewidth]{Alan_Turing_photo} &
+\includegraphics[width=0.13\linewidth]{photo_Edvard} &
 \includegraphics[width=0.13\linewidth]{photo_Jonas}
 \\[0.7cm]
 \end{tabular}}
