--- a/report/related_works.tex
+++ b/report/related_works.tex
@@ -13,7 +13,7 @@ Continuing on the topic of tutorials; the study of smoothing techniques, perplex
 
 %Further, perplexity scores are a quantitative correlation to readability, writes Jurafsky et al.  
 
-Smoothing has been shown, empirically, to improve the prediction accuracy of N-gram models by \cite{chen-smoothing}. We referenced this work in determining which smoothing techniques to implement in our experiment. Discussion of the employed smoothing techniques are discussed 
+Smoothing has been shown, empirically, to improve the prediction accuracy of N-gram models by \cite{chen-smoothing}. We referenced this work in determining which smoothing techniques to implement in our experiment. Discussion of the employed smoothing techniques are found in the section on smoothing.
 
 %By making the distributions within the N-gram model more uniform, pushing down high probabilitities and increasing low, the model can account for zero probabilities. It is further argued by \cite{chen-smoothing} that Add-One or Laplace smoothing performs poorly, due to shaving off too much probability from the higher count N-grams.  
 
